--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -76,6 +76,7 @@
   <string name="BucketedThreadMedia_This_week">Săptămâna aceasta</string>
   <string name="BucketedThreadMedia_This_month">Luna asta</string>
   <string name="BucketedThreadMedia_Large">Mare</string>
+  <string name="BucketedThreadMedia_Medium">Mediu</string>
   <string name="BucketedThreadMedia_Small">Mic</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Apel de intrare</string>
@@ -103,6 +104,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Nu s-a găsit nici un web browser.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Un apel celular este deja în desfășurare.</string>
+  <string name="CommunicationActions_start_video_call">Începeți apelul video?</string>
+  <string name="CommunicationActions_start_voice_call">Începeți apelul vocal?</string>
   <string name="CommunicationActions_cancel">Anulați</string>
   <string name="CommunicationActions_call">Apelează</string>
   <!--ConfirmIdentityDialog-->
@@ -317,6 +320,10 @@
   <string name="DeviceListItem_today">Azi</string>
   <!--DocumentView-->
   <string name="DocumentView_unknown_file">Fișier necunoscut</string>
+  <string name="DocumentView_unnamed_file">Fișier fără nume</string>
+  <string name="DocumentView_audio_file">Fișier audio</string>
+  <string name="DocumentView_image_file">Fișier imagine</string>
+  <string name="DocumentView_video_file">Fișier video</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimizează pentru lipsa serviciilor Play</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Acest dispozitiv nu suportă serviciile Play. Apasă pentru a dezactiva optimizarea de sistem a bateriei care împiedică Signal să preia mesajele cât timp este inactivă.</string>
@@ -386,6 +393,8 @@
   <!--InviteActivity-->
   <string name="InviteActivity_share">Distribuie</string>
   <string name="InviteActivity_choose_contacts">Alegeți contactele</string>
+  <string name="InviteActivity_share_with_contacts">Distribuie la contacte</string>
+  <string name="InviteActivity_choose_how_to_share">Alegeți cum să distribuiți</string>
   <string name="InviteActivity_cancel">Anulați</string>
   <string name="InviteActivity_sending">Se trimite…</string>
   <string name="InviteActivity_heart_content_description">Inimă</string>
@@ -420,11 +429,31 @@
   <string name="MmsDownloader_error_reading_mms_settings">Eroare la citirea setărilor MMS ale operatorului wireless</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Media</string>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
+    <item quantity="one">Ștergeți elementul selectat?</item>
+    <item quantity="few">Ștergeți elementul selectat?</item>
+    <item quantity="other">Ștergeți elementele selectate?</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
+    <item quantity="one">Această acțiune va șterge permanent fișierul selectat. Orice mesaj text asociat cu acest element va fi de asemenea șters.</item>
+    <item quantity="few">Această acțiune va șterge permanent toate cele %1$d fișierele selectate. Orice mesaj text asociat cu aceste elemente vor fi de asemenea șterse.</item>
+    <item quantity="other">Această acțiune va șterge permanent toate cele %1$d fișierele selectate. Orice mesaj text asociat cu aceste elemente vor fi de asemenea șterse.</item>
+  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Se șterge</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Se șterg mesajele…</string>
+  <string name="MediaOverviewActivity_Files">Fișiere</string>
   <string name="MediaOverviewActivity_Select_all">Selectează tot</string>
   <string name="MediaOverviewActivity_collecting_attachments">Se colectează atașamentele…</string>
   <string name="MediaOverviewActivity_Audio">Audio</string>
+  <string name="MediaOverviewActivity_All">Toate</string>
+  <string name="MediaOverviewActivity_Sort_by">Sortează după</string>
+  <string name="MediaOverviewActivity_Newest">Noi</string>
+  <string name="MediaOverviewActivity_Oldest">Vechi</string>
+  <string name="MediaOverviewActivity_Storage_used">Utilizare stocare</string>
+  <string name="MediaOverviewActivity_All_storage_use">Toată utilizarea stocării</string>
+  <string name="MediaOverviewActivity_Grid_view_description">Vizualizare grilă</string>
+  <string name="MediaOverviewActivity_List_view_description">Vizualizare listă</string>
+  <string name="MediaOverviewActivity_Selected_description">Selectat</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Apel Signal în curs</string>
   <string name="NotificationBarManager__establishing_signal_call">Se realizează un apel Signal</string>
@@ -523,10 +552,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Această versiune de Google Play Services pe care o ai instalată nu funcționează corect. Te rog reinstalează Google Play Services și încearcă din nou.</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_profile_name">Nume profil</string>
+  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Numele profilului dvs. poate fi văzut de contactele dvs. și de alți utilizatori sau grupuri atunci când inițiați o conversație sau acceptați o solicitare de conversație.</string>
   <string name="ProfileEditNameFragment_save">Salvează</string>
   <!--ProfileEditOverviewFragment-->
   <string name="ProfileEditOverviewFragment_profile">Profil</string>
+  <string name="ProfileEditOverviewFragment_profile_name">Nume profil</string>
   <string name="ProfileEditOverviewFragment_username">Nume utilizator</string>
+  <string name="ProfileEditOverviewFragment_create_a_profile_name">Creați un nume de profil</string>
+  <string name="ProfileEditOverviewFragment_create_a_username">Creați un nume de utilizator</string>
+  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Profilul Signal poate fi văzut de contactele dvs. și de alți utilizatori sau grupuri atunci când inițiați o conversație sau acceptați o solicitare de conversație. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Apăsați pentru a afla mai multe</a>.</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Evaluați aplicaţia</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Dacă vă place aplicaţia, vă rog ajutați-ne cu o evaluare.</string>
@@ -594,6 +629,8 @@ furnizat (%s) este invalid.</string>
   <string name="RegistrationActivity_failed_to_verify_the_captcha">Nu s-a putut verifica CAPTCHA</string>
   <string name="RegistrationActivity_next">Următorul</string>
   <string name="RegistrationActivity_continue">Continuați</string>
+  <string name="RegistrationActivity_continue_d_attempts_left">Continuați (%d încercări rămase)</string>
+  <string name="RegistrationActivity_continue_last_attempt">Continuați (ultima încercare!)</string>
   <string name="RegistrationActivity_take_privacy_with_you_be_yourself_in_every_message">Ia-ți intimitatea cu tine.\nFii tu însuți în fiecare mesaj.</string>
   <string name="RegistrationActivity_enter_your_phone_number_to_get_started">Introduceți numărul dvs. de telefon pentru a putea începe</string>
   <string name="RegistrationActivity_you_will_receive_a_verification_code">Veți primi un cod de verificare. Se pot aplica tarife de operator.</string>
@@ -695,6 +732,16 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="UsernameEditFragment_username">Nume utilizator</string>
   <string name="UsernameEditFragment_submit">Trimite</string>
   <string name="UsernameEditFragment_delete">Șterge</string>
+  <string name="UsernameEditFragment_successfully_set_username">Numele de utilizator a fost setat cu succes.</string>
+  <string name="UsernameEditFragment_successfully_removed_username">Numele de utilizator a fost eliminat cu succes.</string>
+  <string name="UsernameEditFragment_encountered_a_network_error">A apărut o eroare de rețea.</string>
+  <string name="UsernameEditFragment_this_username_is_taken">Acest nume de utilizator este luat.</string>
+  <string name="UsernameEditFragment_this_username_is_available">Acest nume de utilizator este disponibil.</string>
+  <string name="UsernameEditFragment_usernames_can_only_include">Numele de utilizatori pot conține doar a-z, 0-9, și _.</string>
+  <string name="UsernameEditFragment_usernames_cannot_begin_with_a_number">Numele de utilizator nu pot începe cu un număr.</string>
+  <string name="UsernameEditFragment_username_is_invalid">Numele de utilizator este invalid.</string>
+  <string name="UsernameEditFragment_usernames_must_be_between_a_and_b_characters">Numele de utilizator trebuie sa aibe între %1$d și %2$d caractere.</string>
+  <string name="UsernameEditFragment_other_signal_users_can_send_message_requests_to_your_unique_username">Alți utilizatori de Signal pot trimite solicitări de mesaje către numele dvs. de utilizator unic, fără să știe numărul dvs. de telefon. Alegerea unui nume de utilizator este opțională.</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Contactul tău folosește o versiune mai veche de Signal. Roagă-l să-și actualizeze versiunea înainte de a verifica numărul tău de siguranță.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Contactul tău folosește o versiune mai nouă de Signal cu un format de cod QR incompatibil. Te rog actualizează-ți aplicația pentru a putea compara.</string>
@@ -734,6 +781,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="MediaPreviewActivity_unable_to_write_to_external_storage_without_permission">Nu se poate salva pe spațiu de stocare extern fără permisiune</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_title">Șterg mesajul?</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Această acțiune va șterge permanent mesajul.</string>
+  <string name="MediaPreviewActivity_s_to_s">%1$s la %2$s</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d mesaje noi în %2$d conversaţii</string>
   <string name="MessageNotifier_most_recent_from_s">Cel mai recent de la: %1$s</string>
@@ -755,6 +803,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Deschideți Signal pentru a verifica notificările recente.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Contact</string>
+  <string name="MessageNotifier_reacted_to_your_message">A reacționat la mesajul tău: %1$s</string>
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Implicit</string>
   <string name="NotificationChannel_calls">Apeluri</string>
@@ -766,6 +815,8 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="NotificationChannel_group_messages">Mesaje</string>
   <string name="NotificationChannel_missing_display_name">Necunoscut</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_successfully_set_profile_name">Numele de profil a fost setat cu succes.</string>
+  <string name="ProfileEditNameFragment_encountered_a_network_error">A apărut o eroare de rețea.</string>
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Răspunsul rapid nu este disponibil cât timp Signal este blocat!</string>
   <string name="QuickResponseService_problem_sending_message">Problemă la trimiterea mesajului!</string>
@@ -781,6 +832,8 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Mesaj nou</string>
   <!--ThumbnailView-->
+  <string name="ThumbnailView_Play_video_description">Redați video</string>
+  <string name="ThumbnailView_Has_a_caption_description">Are un titlu</string>
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d articol</item>
@@ -847,6 +900,8 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">Signal are nevoie de permisiunea pentru Contacte pentru a putea afișa contactele tale dar i-a fost refuzat accesul permanent. Vă rog navigați în meniul de setări al aplicației, selectați \"Permisiuni\" și activați \"Contacte\".</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Eroare la obținerea contactelor, verifică conexiune la rețea.</string>
+  <string name="ContactSelectionListFragment_username_not_found">Numele de utilizator nu a fost găsit</string>
+  <string name="ContactSelectionListFragment_s_is_not_a_signal_user">\"%1$s\" nu este un utilizator de Signal. Verificați numele de utilizator și încercați din nou.</string>
   <string name="ContactSelectionListFragment_okay">Okay</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Nu aveți contacte blocate</string>
@@ -1201,7 +1256,12 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="preferences_chats__when_roaming">Când se utilizează roaming-ul </string>
   <string name="preferences_chats__media_auto_download">Descărcare automată Media</string>
   <string name="preferences_chats__message_trimming">Scurtarea mesajelor</string>
+  <string name="preferences_storage__storage_usage">Utilizare stocare</string>
+  <string name="preferences_storage__photos">Poze</string>
+  <string name="preferences_storage__videos">Video-uri</string>
+  <string name="preferences_storage__files">Fișiere</string>
   <string name="preferences_storage__audio">Audio</string>
+  <string name="preferences_storage__review_storage">Examinați stocarea</string>
   <string name="preferences_advanced__use_system_emoji">Foloseşte emoji de sistem</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Dezactivați icoanele emoji oferite de Signal </string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Redirecționați toate apelurile către serverul Signal pentru a evita aflarea adresei IP de către contact tău. Activarea va reduce calitatea apelului.</string>
@@ -1235,6 +1295,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="conversation_callable_insecure__menu_call">Apelează</string>
   <!--conversation_callable_secure-->
   <string name="conversation_callable_secure__menu_call">Apel Signal</string>
+  <string name="conversation_callable_secure__menu_video">Apel video Signal</string>
   <!--conversation_context-->
   <string name="conversation_context__menu_message_details">Detalii mesaj</string>
   <string name="conversation_context__menu_copy_text">Copiază textul</string>
@@ -1243,6 +1304,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="conversation_context__menu_resend_message">Retrimite mesajul</string>
   <string name="conversation_context__menu_reply_to_message">Răspunde la mesaj</string>
   <!--conversation_context_reacction-->
+  <string name="conversation_context__reaction_multi_select">Selectați mai multe</string>
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Salvează ataşamentul</string>
   <!--conversation_expiring_off-->
@@ -1448,6 +1510,8 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Eroare de conectare la serviciu</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Dezactivare PIN Blocare Înregistrare?</string>
   <string name="RegistrationLockDialog_disable">Dezactivați</string>
+  <string name="RegistrationActivity_pin_incorrect">PIN incorect</string>
+  <string name="RegistrationActivity_you_have_d_tries_remaining">Mai aveți %d încercări rămase</string>
   <string name="preferences_chats__backups">Backup-uri</string>
   <string name="prompt_passphrase_activity__signal_is_locked">Signal este blocat</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">APĂSAȚI PENTRU DEBLOCARE</string>
@@ -1457,5 +1521,15 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="MessageRequestBottomView_accept">Acceptați</string>
   <string name="MessageRequestBottomView_delete">Șterge</string>
   <string name="MessageRequestBottomView_block">Blochează</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let">Doriți să primiți mesaje de la %1$s?</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Membru al %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Membru al %1$s și %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Membru al %1$s, %2$s, și %3$s</string>
+  <string name="MessageRequestProfileView_members">%1$d membrii</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d altul</item>
+    <item quantity="few">%d alții</item>
+    <item quantity="other">%d alții</item>
+  </plurals>
   <!--EOF-->
 </resources>
