--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -79,6 +79,7 @@
   <string name="BucketedThreadMedia_This_week">Ta teden</string>
   <string name="BucketedThreadMedia_This_month">Ta mesec</string>
   <string name="BucketedThreadMedia_Large">Velike</string>
+  <string name="BucketedThreadMedia_Medium">Srednji</string>
   <string name="BucketedThreadMedia_Small">Majhne</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Dohodni klic</string>
@@ -106,6 +107,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Spletnega brskalnika ni bilo mogoče najti.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Telefonski klic je že v teku.</string>
+  <string name="CommunicationActions_start_video_call">Začetek video klica?</string>
+  <string name="CommunicationActions_start_voice_call">Začetek glasovnega klica?</string>
   <string name="CommunicationActions_cancel">Prekliči</string>
   <string name="CommunicationActions_call">Kliči</string>
   <!--ConfirmIdentityDialog-->
@@ -116,6 +119,8 @@
   <string name="ContactsCursorLoader_recent_chats">Nedavni pogovori</string>
   <string name="ContactsCursorLoader_contacts">Stiki</string>
   <string name="ContactsCursorLoader_groups">Skupine</string>
+  <string name="ContactsCursorLoader_phone_number_search">Iskanje po telefonskih številkah</string>
+  <string name="ContactsCursorLoader_username_search">Iskanje po uporabniških imenih</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Sporočilo %s</string>
   <string name="ContactsDatabase_signal_call_s">Klic Signal: %s</string>
@@ -329,6 +334,10 @@
   <string name="DeviceListItem_today">Danes</string>
   <!--DocumentView-->
   <string name="DocumentView_unknown_file">Neznana datoteka</string>
+  <string name="DocumentView_unnamed_file">Datoteka brez imena</string>
+  <string name="DocumentView_audio_file">Zvočna datoteka</string>
+  <string name="DocumentView_image_file">Slikovna datoteka</string>
+  <string name="DocumentView_video_file">Video datoteka</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimiziraj za manjkajočo aplikacijo Play Services</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Naprava ne podpira storitev Play Services. Tapnite za izklop optimizacije baterije, ki aplikaciji Signal preprečuje povezavo v času neaktivnosti naprave.</string>
@@ -398,6 +407,8 @@
   <!--InviteActivity-->
   <string name="InviteActivity_share">Deli</string>
   <string name="InviteActivity_choose_contacts">Izberi uporabnike</string>
+  <string name="InviteActivity_share_with_contacts">Deli s stiki</string>
+  <string name="InviteActivity_choose_how_to_share">Izbira načina deljenja</string>
   <string name="InviteActivity_cancel">Prekliči</string>
   <string name="InviteActivity_sending">Pošiljanje …</string>
   <string name="InviteActivity_heart_content_description">Srce</string>
@@ -434,11 +445,33 @@
   <string name="MmsDownloader_error_reading_mms_settings">Napaka pri branju nastavitev MMS brezžičnega ponudnika</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Multimedija</string>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
+    <item quantity="one">Izbris izbranega predmeta?</item>
+    <item quantity="two">Izbris izbranih predmetov?</item>
+    <item quantity="few">Izbris izbranih predmetov?</item>
+    <item quantity="other">Izbris izbranih predmetov?</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
+    <item quantity="one">S tem boste nepovratno izbrisali izbrano datoteko. Vsak tekst povezan s to datoteko bo prav tako izbrisan.</item>
+    <item quantity="two">S tem boste nepovratno izbrisali %1$d izbrani datoteki. Vsak tekst povezan s tema datotekama bo prav tako izbrisan.</item>
+    <item quantity="few">S tem boste nepovratno izbrisali %1$d izbrane datoteke. Vsak tekst povezan s temi datotekami bo prav tako izbrisan.</item>
+    <item quantity="other">S tem boste nepovratno izbrisali %1$d izbranih datotek. Vsak tekst povezan s temi datotekami bo prav tako izbrisan.</item>
+  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Brišem</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Izbris sporočil …</string>
+  <string name="MediaOverviewActivity_Files">Datoteke</string>
   <string name="MediaOverviewActivity_Select_all">Označi vse</string>
   <string name="MediaOverviewActivity_collecting_attachments">Nabiranje prilog …</string>
   <string name="MediaOverviewActivity_Audio">Zvok</string>
+  <string name="MediaOverviewActivity_All">Vse</string>
+  <string name="MediaOverviewActivity_Sort_by">Razvrščanje po</string>
+  <string name="MediaOverviewActivity_Newest">Najnovejših</string>
+  <string name="MediaOverviewActivity_Oldest">Najstarejših</string>
+  <string name="MediaOverviewActivity_Storage_used">Porabljen pomnilnik</string>
+  <string name="MediaOverviewActivity_All_storage_use">Ves porabljen pomnilnik</string>
+  <string name="MediaOverviewActivity_Grid_view_description">Mrežni pogled</string>
+  <string name="MediaOverviewActivity_List_view_description">Seznam</string>
+  <string name="MediaOverviewActivity_Selected_description">Izbrano</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Klic Signal poteka</string>
   <string name="NotificationBarManager__establishing_signal_call">Vzpostavljam klic Signal</string>
@@ -537,9 +570,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Različica programa Google Play Services, ki jo imate nameščeno, ne deluje, kot bi morala. Prosimo, ponovno namestite Google Play Services in poskusite znova.</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_profile_name">Naziv profila</string>
+  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Naziv vašega profila je viden vašim stikom ter drugim uporabnikom in skupinam kadar začnete pogovor z njimi ali sprejmete njihovo povabilo k pogovoru.</string>
   <string name="ProfileEditNameFragment_save">Shrani</string>
   <!--ProfileEditOverviewFragment-->
   <string name="ProfileEditOverviewFragment_profile">Profil</string>
+  <string name="ProfileEditOverviewFragment_profile_name">Naziv profila</string>
+  <string name="ProfileEditOverviewFragment_username">Uporabniško ime</string>
+  <string name="ProfileEditOverviewFragment_create_a_profile_name">Stvaritev imena profila</string>
+  <string name="ProfileEditOverviewFragment_create_a_username">Stvaritev uporabniškega imena</string>
+  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Vaš Pofil Signal je viden vašim stikom ter drugim uporabnikom in skupinam kadar začnete pogovor z njimi ali sprejmete njihovo povabilo k pogovoru. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Za več informacij tapnite tukaj</a>.</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Oceni to aplikacijo</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Če se vam zdi aplikacija Signal koristna in uporabna, vas prosimo, da si vzamete nekaj trenutkov in jo ocenite.</string>
@@ -605,6 +645,8 @@
   <string name="RegistrationActivity_failed_to_verify_the_captcha">Preverba CAPTCHA ni bila uspešna</string>
   <string name="RegistrationActivity_next">Naprej</string>
   <string name="RegistrationActivity_continue">Nadaljuj</string>
+  <string name="RegistrationActivity_continue_d_attempts_left">Nadaljuj (število preostalih poskusov:%d)</string>
+  <string name="RegistrationActivity_continue_last_attempt">Nadaljuj (zadnji poskus!)</string>
   <string name="RegistrationActivity_take_privacy_with_you_be_yourself_in_every_message">Vzemite svojo zasebnost v lastne roke!\nDa boste v sporočilih lahko to kar ste.</string>
   <string name="RegistrationActivity_enter_your_phone_number_to_get_started">Za začetek vpišite svojo telefonsko številko.</string>
   <string name="RegistrationActivity_you_will_receive_a_verification_code">Prejeli boste potrditveno kodo. Sporočilo SMS je lahko plačljivo.</string>
@@ -703,8 +745,19 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="UnverifiedSendDialog_send_message">Pošljem sporočilo?</string>
   <string name="UnverifiedSendDialog_send">Pošlji</string>
   <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_username">Uporabniško ime</string>
   <string name="UsernameEditFragment_submit">Oddaj</string>
   <string name="UsernameEditFragment_delete">Izbriši</string>
+  <string name="UsernameEditFragment_successfully_set_username">Uspešno ste določili uporabniško ime.</string>
+  <string name="UsernameEditFragment_successfully_removed_username">Uspešno ste izbrisali uporabniško ime.</string>
+  <string name="UsernameEditFragment_encountered_a_network_error">Prišlo je do napake na omrežju.</string>
+  <string name="UsernameEditFragment_this_username_is_taken">Uporabniško ime je že zasedeno.</string>
+  <string name="UsernameEditFragment_this_username_is_available">Uporabniško ime je na voljo.</string>
+  <string name="UsernameEditFragment_usernames_can_only_include">Uporabniška imena lahko vsebujejo samo znake a-Z, 0-9 in podčrtaje.</string>
+  <string name="UsernameEditFragment_usernames_cannot_begin_with_a_number">Uporabniška imena se ne morejo začeti s števikami.</string>
+  <string name="UsernameEditFragment_username_is_invalid">Uporabniško ime je neveljavno.</string>
+  <string name="UsernameEditFragment_usernames_must_be_between_a_and_b_characters">Uporabniška imena morajo vsebovati od %1$d in%2$d znakov.</string>
+  <string name="UsernameEditFragment_other_signal_users_can_send_message_requests_to_your_unique_username">Drugi uporabniki storitve Signal lahko pošiljajo prošnje za pogovor na vaše unikatno uporabniško ime tudi brez poznavanja vaše telefonske številke. Uporaba uporabniškega imena je opcijska.</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Vaš partner uporablja zastarelo različico aplikacije Signal. Za pregled in potrditev varnostnega števila jo bo moral nadgraditi.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Vaš partner uporablja novejšo različico aplikacije Signal z nekompatibilnimi kodami QR. Prosimo, nadgradite svojo aplikacijo.</string>
@@ -744,6 +797,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="MediaPreviewActivity_unable_to_write_to_external_storage_without_permission">Brez dovoljenja za dostop do shrambe ne morem shranjevati na zunanji pomnilnik naprave.</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_title">Izbrišem sporočilo?</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Sporočilo bo nepovratno izbrisano.</string>
+  <string name="MediaPreviewActivity_s_to_s">%1$s do %2$s</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">Novih sporočil: %1$d, pogovorov: %2$d</string>
   <string name="MessageNotifier_most_recent_from_s">Zadnje sporočilo od: %1$s</string>
@@ -765,6 +819,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Odprite Signal in preverite nova sporočila.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Stik</string>
+  <string name="MessageNotifier_reacted_to_your_message">Odziv na vaše sporočilo: %1$s</string>
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Privzeto</string>
   <string name="NotificationChannel_calls">Klici</string>
@@ -776,6 +831,8 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="NotificationChannel_group_messages">Sporočila</string>
   <string name="NotificationChannel_missing_display_name">Neznano</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_successfully_set_profile_name">Uspešno ste določili naziv svojega profila.</string>
+  <string name="ProfileEditNameFragment_encountered_a_network_error">Prišlo je do napake na omrežju.</string>
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Hitri odziv ni mogoč, kadar je aplikacija Signal zaklenjena!</string>
   <string name="QuickResponseService_problem_sending_message">Težava pri pošiljanju sporočila</string>
@@ -791,6 +848,8 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Novo sporočilo</string>
   <!--ThumbnailView-->
+  <string name="ThumbnailView_Play_video_description">Predvajaj video</string>
+  <string name="ThumbnailView_Has_a_caption_description">Ima besedilo</string>
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d predmet</item>
@@ -858,6 +917,9 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">Dostop do stikov je bil trajno onemogočen. Aplikacija Signal potrebuje dovoljenje za dostop do stikov, da lahko prikazuje imena stikov iz vašega imenika. Prosimo, pojdite v meni Nastavitve aplikacij, izberite \"Dovoljenja\" in omogočite dovoljenje pod postavko \"Stiki\".</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Napaka pri preverjanju uporabnikov. Preverite svoj dostop do omrežja.</string>
+  <string name="ContactSelectionListFragment_username_not_found">Uporabniško ime ni bilo najdeno</string>
+  <string name="ContactSelectionListFragment_s_is_not_a_signal_user">\"%1$s\" ni uporabnik storitve Signal. Preverite uporabniško ime in poskusite znova.</string>
+  <string name="ContactSelectionListFragment_okay">Okej</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Ni blokiranih uporabnikov</string>
   <!--contact_selection_list_fragment-->
@@ -1218,7 +1280,12 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="preferences_chats__when_roaming">Med gostovanjem</string>
   <string name="preferences_chats__media_auto_download">Samodejen prenos priponk</string>
   <string name="preferences_chats__message_trimming">Izbris starih sporočil</string>
+  <string name="preferences_storage__storage_usage">Poraba pomnilnika</string>
+  <string name="preferences_storage__photos">Fotografije</string>
+  <string name="preferences_storage__videos">Videi</string>
+  <string name="preferences_storage__files">Datoteke</string>
   <string name="preferences_storage__audio">Zvok</string>
+  <string name="preferences_storage__review_storage">Pregled porabe pomnilnika</string>
   <string name="preferences_advanced__use_system_emoji">Sistemski znaki emoji</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Izklop privzetih znakov emoji aplikacije Signal</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Vsi klici bodo posredovani preko strežnika Signal. S tem boste klicani strani onemogočili, da bi izvedela vaš naslov IP. Kvaliteta klica bo zaradi tega slabša.</string>
@@ -1252,6 +1319,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="conversation_callable_insecure__menu_call">Kliči</string>
   <!--conversation_callable_secure-->
   <string name="conversation_callable_secure__menu_call">Klic Signal</string>
+  <string name="conversation_callable_secure__menu_video">Video klic Signal</string>
   <!--conversation_context-->
   <string name="conversation_context__menu_message_details">Podrobnosti sporočila</string>
   <string name="conversation_context__menu_copy_text">Kopiraj besedilo</string>
@@ -1260,6 +1328,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="conversation_context__menu_resend_message">Ponovno pošlji sporočilo</string>
   <string name="conversation_context__menu_reply_to_message">Odgovor na sporočilo</string>
   <!--conversation_context_reacction-->
+  <string name="conversation_context__reaction_multi_select">Izberi več</string>
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Shrani priponko</string>
   <!--conversation_expiring_off-->
@@ -1466,6 +1535,8 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Napaka pri povezavi do storitve</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Izklopim PIN za prijavo v omrežje?</string>
   <string name="RegistrationLockDialog_disable">Onemogoči</string>
+  <string name="RegistrationActivity_pin_incorrect">Napačen PIN</string>
+  <string name="RegistrationActivity_you_have_d_tries_remaining">Število poskusov še na  voljo: %d</string>
   <string name="preferences_chats__backups">Varnostne kopije</string>
   <string name="prompt_passphrase_activity__signal_is_locked">Signal je zaklenjen</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">TAPNITE ZA ODKLEPANJE</string>
@@ -1475,5 +1546,16 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="MessageRequestBottomView_accept">Sprejmi</string>
   <string name="MessageRequestBottomView_delete">Izbriši</string>
   <string name="MessageRequestBottomView_block">Blokiraj</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let">Ali želite prejemati sporočila uporabnika %1$s?</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Član skupine %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Član skupin %1$s in %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Član skupin %1$s, %2$s in %3$s</string>
+  <string name="MessageRequestProfileView_members">%1$d članov</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d ostali</item>
+    <item quantity="two">%d ostala</item>
+    <item quantity="few">%d ostali</item>
+    <item quantity="other">%d ostalih</item>
+  </plurals>
   <!--EOF-->
 </resources>
