--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -506,6 +506,14 @@
     <string name="MediaOverviewActivity_List_view_description">List view</string>
     <string name="MediaOverviewActivity_Selected_description">Selected</string>
 
+    <plurals name="MediaOverviewActivity_d_items_s">
+        <item quantity="one">%1$d item %2$s</item>
+        <item quantity="other">%1$d items %2$s</item>
+    </plurals>
+    <plurals name="MediaOverviewActivity_d_items">
+        <item quantity="one">%1$d item</item>
+        <item quantity="other">%1$d items</item>
+    </plurals>
     <string name="MediaOverviewActivity_file">File</string>
     <string name="MediaOverviewActivity_audio">Audio</string>
     <string name="MediaOverviewActivity_video">Video</string>
